--- a/app/globals.css
+++ b/app/globals.css
@@ -4,19 +4,19 @@
 
 @layer base {
     :root {
-      /* For rgb(255 115 179 / <alpha-value>) */
-      --color-primary: 250 128 114 ;
-      --color-secondary:233 150 122 ;
-      --color-terciary: 255 160 122 ;
+        /* For rgb(255 115 179 / <alpha-value>) */
+        --color-primary: 250 128 114;
+        --color-secondary: 233 150 122;
+        --color-terciary: 255 160 122;
+        --color-text:209 213 219;
     }
-  }
+}
 
 .backgroundHeader {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat,repeat;
-  background-attachment: fixed;
-  min-height: 100vh;
-  width: 100%;
-  position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    width: 100%;
 }
