--- a/components/components.css
+++ b/components/components.css
@@ -5,3 +5,19 @@
     box-shadow: rgba(60, 64, 67, 0.3) 0px 2px 6px 0px, rgba(60, 64, 67, 0.15) 0px 0px 6px 2px;
   }
 
+  .backgroundHeader {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    width: 100%;
+  }
+  
+  /* Estilo adicional para mejor responsividad */
+  @media (max-width: 768px) {
+    .backgroundHeader {
+      background-attachment: scroll; /* Permite el desplazamiento en pantallas pequeñas */
+    }
+  }
+  
