--- a/components/components.css
+++ b/components/components.css
@@ -1,3 +1,28 @@
+/* Estilo global para asegurar el comportamiento consistente del tamaño de los elementos */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Ajustes para el contenedor principal */
+main {
+  box-sizing: border-box;
+  margin: 1rem;
+  padding: 1rem; /* Agregar padding para espaciar internamente */
+}
+
+/* Ajuste para el header */
+.border-header {
+  border: 3px solid #e5e5e5; /* Borde suave */
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box; /* Asegurar que el padding y el borde se consideren dentro del ancho total */
+}
+
 .custom-shadow {
     position: relative;
     padding: 10px;
@@ -19,6 +44,50 @@
   @media (max-width: 768px) {
     .backgroundHeader {
       background-attachment: fixed; /* Permite el desplazamiento en pantallas pequeñas */
+    }
+  }
+  
+
+  .wedding-border {
+    border: 3px solid #e5e5e5 ; /* Borde suave */
+    border-radius: 15px ;
+    padding: 20px ;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px ;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  /* .wedding-border::before,
+  .wedding-border::after {
+    content: '';
+    position: absolute ;
+    width: 30px ; 
+    height: 30px ;
+    border-radius: 70%  ;
+    background-color: #f1f1eb ;
+    z-index: 100 ;
+  }
+  
+  .wedding-border::before {
+    top: -10px ;
+    left: -10px ;
+  }
+  
+  .wedding-border::after {
+    bottom: -10px ;
+    right: -10px ;
+  }
+  
+  .wedding-border::after,
+  .wedding-border::before {
+     background-image: radial-gradient(circle at center, #fdd9e7, transparent) ; 
+    z-index: 99 ;
+  } */
+  
+  
+  @media (max-width: 768px) {
+    .wedding-border {
+      margin-bottom: 20px ; /* Espaciado en pantallas pequeñas */
     }
   }
   
