cambios en los componentes asistency y song

--- a/components/components.css
+++ b/components/components.css
@@ -7,6 +7,26 @@
   box-sizing: border-box;
 }
 
+#songName, #songAuthor, #songLink ,#nombre, #apellido, #parejaNombre, #parejaApellido,#otraInfo{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: #2d3748;
+}
+
+#songName:focus, #songAuthor:focus, #songLink:focus ,#nombre:focus, #apellido:focus, #parejaNombre:focus, #parejaApellido:focus,#otraInfo:focus {
+  background-color: white;
+}
+
+
+
+
+
+
 /* Ajustes para el contenedor principal */
 main {
   box-sizing: border-box;
